added chart types, 'the angular way', some styling

--- a/style.css
+++ b/style.css
@@ -1,127 +1,4 @@
-
-/* Main Containers */
-.outer-container {
-  height: 600px;
-  width: 500px;
-  background: #eee;
-  border: 5px solid #ccc;
+.btn-chart-type {
+  width: 30%;
+  margin: 1%;
 }
-.game-window {
-  height: 100%;
-  width: 300px;
-  background: #222;
-  border-right: 3px solid #53f;
-  float: left;
-}
-.status-window {
-  height: 100%;
-  width: 197px;
-  background: #feb;
-  float: right;
-}
-
-.title-screen {
-  position: relative;
-  color: white;
-  left: -130%;
-  top: -430px;
-  width: 200px;
-  text-align: center;
-}
-
-.settings {
-  position: relative;
-}
-
-.welcome-text .button {
-  color: white;
-  background-color: blue;
-  font-size: 20px;
-}
-
-.welcome-text .button:hover {
-  background-color: green;
-}
-
-.game-over {
-  background-color: red;
-  width: 497px;
-  text-align: center;
-}
-
-/* Game Objects */
-.ship {
-  top: 530px;
-  left: 122px;
-  position: relative;
-  display: inline-block;
-}
-.rocket {
-  position: absolute;
-}
-.rocket img {
-  height: 40px;
-}
-.asteroid {
-  position: absolute;
-}
-
-.ship-explosion {
-  position: absolute;
-  top: -10px;
-}
-
-.life {
-  position: relative;
-  right: -200px;
-  top: -500px;
-}
-
-.life2 {
-  position: relative;
-  right: -185px;
-  top: -485px;
-}
-
-.life3 {
-  position: relative;
-  right: -170px;
-  top: -470px;
-}
-
-.life4 {
-  position: relative;
-  right: -155px;
-  top: -455px;
-}
-
-.life5 {
-  position: relative;
-  right: -140px;
-  top: -440px;
-}
-
-.life6 {
-  position: relative;
-  right: -125px;
-  top: -425px;
-}
-
-.life7 {
-  position: relative;
-  right: -110px;
-  top: -410px;
-}
-
-.life8 {
-  position: relative;
-  right: -95px;
-  top: -395px;
-}
-
-.life9 {
-  position: relative;
-  right: -80px;
-  top: -380px;
-}
-
