--- a/style.css
+++ b/style.css
@@ -83,21 +83,34 @@ body {
 }
 
 h3 {
-
+  color: #111; 
+  font-family: 'Helvetica Neue', sans-serif; 
+  font-size: 45px; 
+  font-weight: bold; 
+  letter-spacing: -1px; 
+  line-height: 1; 
+  text-align: center;
+  padding-bottom: 10px;
 }
 
 h5 {
-   width: 450px;
+   width: 500px;
    white-space: nowrap;  
    overflow: hidden;
    text-overflow: ellipsis;
+   font-family: 'Helvetica Neue', sans-serif; 
+   font-size: 14px; 
+   line-height: 24px; 
+   margin: 0 0 0px; 
+   text-align: justify; 
+   text-justify: inter-word;
 }
 
 .modal-dialog{
     overflow-y: initial;
 }
 .categories-box{
-    height: 400px;
+    height: 300px;
     overflow-y: auto;
 }
 
